--- a/example.cfg
+++ b/example.cfg
@@ -14,12 +14,19 @@ team_size = 3
 ; "HandicapOnly" - allow teams to lower their member count.
 ; "Any" - allow teams to set their member count as they see fit.
 size_override = HandicapOnly
+; OPTIONAL: How long the autorunner should wait before starting the next match, in seconds.
+; The target time isn't guarateed to be hit if shutting down takes too long.
+; Omitting this option makes the autorunner start the next match as soon as possible.
+break_time = 15
 
 [Tournament Configuration]
 ; How the tournament should proceed.
 ; Accepted values are:
 ; "RoundRobin"
 type = RoundRobin
+
+; Here starts normal RLBot configuration.
+; This is used as a base for starting matches.
 
 [RLBot Configuration]
 ; A path to the extension file we want to load.
