Add Fisher-Yates shuffle

--- a/RLBotAutoRunner/RLBotAutoRunner.csproj
+++ b/RLBotAutoRunner/RLBotAutoRunner.csproj
@@ -62,11 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="FileResource.cs" />
     <Compile Include="Keyboard.cs" />
     <Compile Include="UniqueResource.cs" />
     <Compile Include="INIParser.cs" />
-    <Compile Include="Match.cs" />
+    <Compile Include="MatchRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team.cs" />
